src/base/objects/User/fields/Implementation_Owner__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Implementation Owner</label>
    <type>Checkbox</type>
</CustomField>