src/base/objects/User/fields/Opportunity_Role__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Role__c</fullName>
    <description>Decides whether a user will show up in opportunity user lookup.</description>
    <inlineHelpText>Choose &quot;Solutions Architect&quot; to make this user appear on Opportunity: Solutions Architect search.</inlineHelpText>
    <label>Opportunity Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solutions Architect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>