src/base/objects/User/fields/Solutions_Architect__c.field-meta.xml
<CustomField>
    <fullName>Solutions_Architect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solutions Architect</label>
    <type>Checkbox</type>
</CustomField>