src/base/objects/User/fields/Task_Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Task_Email_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if you no longer wish to receive emails 1 day before your tasks are due.</inlineHelpText>
    <label>Task Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>