src/base/objects/User/fields/Technical_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Technical_Account_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Technical Account Owner</label>
    <type>Checkbox</type>
</CustomField>