src/base/objects/User/listViews/XMFA_view.listView-meta.xml
<ListView>
    <fullName>XMFA_view</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>PHONE_VERIFIED</columns>
    <columns>HAS_TOTP</columns>
    <columns>HAS_AUTHENTICATOR</columns>
    <columns>HAS_TEMP_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>MFA view</label>
</ListView>